--- a/ui.html
+++ b/ui.html
@@ -48,6 +48,27 @@
     border: 0;
     box-shadow: inset 0 0 0 1px #323232;
   }
+  input[type="range"] {
+    appearance: none;
+  }
+  input[type="range"]::-webkit-slider-runnable-track {
+    background: #eee;
+    border-radius: 100px;
+    height: 8px;
+  }
+  input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #24cc85;
+    border-radius: 100px;
+    height: 20px;
+    width: 20px;
+    margin-top: -6px;
+    box-shadow: 0 0px 0px 0 #32323200, inset 0 0 0 2px #fff;
+  }
+  input[type="range"]::-webkit-slider-thumb:hover {
+    box-shadow: 0 4px 4px 0 #32323215, inset 0 0 0 2px #fff;
+  }
+
   input:focus {
     border: 0;
     box-shadow: inset 0 0 0 2px #24cc85;
@@ -128,8 +149,6 @@
   .range {
     box-shadow: inset 0 0 0 0px #32323200;
     padding: 0;
-    background: #24cc85;
-    color: #24cc85;
   }
   .range:focus {
     padding: 0;
@@ -157,6 +176,14 @@
       <label>Number of characters: </label>
       <div style="display: flex">
         <input
+          id="countNumber"
+          type="number"
+          value="16"
+          step="2"
+          style="width: 33%"
+        />
+        <div style="width: 32px"></div>
+        <input
           class="range"
           id="countRange"
           type="range"
@@ -164,14 +191,6 @@
           step="2"
           min="0"
           max="48"
-        />
-        <div style="width: 48px"></div>
-        <input
-          id="countNumber"
-          type="number"
-          value="16"
-          step="2"
-          style="width: 33%"
         />
       </div>
     </div>
