--- a/ui.html
+++ b/ui.html
@@ -21,7 +21,7 @@
     padding: 16px 12px;
     width: 100%;
     border-radius: 4px;
-    box-shadow: inset 0 0 0 1px #323232;
+    box-shadow: inset 0 0 0 1px #32323230;
     border: 0;
     stroke: 0;
     outline: none;
@@ -36,7 +36,7 @@
     text-transform: uppercase;
     font-size: 120%;
     border: 0;
-    box-shadow: inset 0 0 0 1px #323232;
+    box-shadow: inset 0 0 0 1px #32323220;
   }
   input {
     cursor: pointer;
@@ -46,7 +46,7 @@
     border-radius: 4px;
     outline: none;
     border: 0;
-    box-shadow: inset 0 0 0 1px #323232;
+    box-shadow: inset 0 0 0 1px #32323220;
   }
   input[type="range"] {
     appearance: none;
