check where the ellipsis is in the selected text object

--- a/ui.html
+++ b/ui.html
@@ -265,12 +265,12 @@
   };
 
   onmessage = (event) => {
-    document.getElementById("replace").style.display = event.data.pluginMessage
-      ? "block"
-      : "none";
-    document.getElementById("buttonSpacer").style.display = event.data
-      .pluginMessage
-      ? "block"
+    document.getElementById("replace").style.display =
+      event.data.pluginMessage === 0 ? "none" : "block";
+    document.getElementById("buttonSpacer").style.display =
+      event.data.pluginMessage === 0 ? "none" : "block";
+    document.getElementById("ellipsis").value = event.data.pluginMessage
+      ? event.data.pluginMessage
       : "none";
   };
 </script>
