--- a/ui.html
+++ b/ui.html
@@ -173,7 +173,7 @@
     </div>
     <div style="height: 16px; width: 1px"></div>
     <div>
-      <label>Number of characters: </label>
+      <label>Number of characters</label>
       <div style="display: flex">
         <input
           id="countNumber"
