--- a/ui.html
+++ b/ui.html
@@ -171,6 +171,15 @@
         <option value="end">End</option>
       </select>
     </div>
+    <div class="select-wrapper">
+      <label for="ellipsis">Ellipsis</label>
+      <select name="ellipsis" id="ellipsis">
+        <option value="none">None</option>
+        <option value="center">Center</option>
+        <option value="start">Start</option>
+        <option value="end">End</option>
+      </select>
+    </div>
     <div style="height: 16px; width: 1px"></div>
     <div>
       <label>Number of characters</label>
