--- a/ui.html
+++ b/ui.html
@@ -138,6 +138,7 @@
     letter-spacing: normal;
     word-wrap: normal;
     white-space: nowrap;
+    pointer-events: none;
   }
 
   .flex-horizontal {
