quick title fix

--- a/ui.html
+++ b/ui.html
@@ -174,7 +174,7 @@
   rel="stylesheet"
 />
 <div style="padding: 8px">
-  <h2>Address Generator</h2>
+  <h2>Random Address Generator</h2>
   <div class="form">
     <div class="flex-horizontal">
       <div class="select-wrapper">
